<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FindIdActivity">

    <ImageButton
        android:id="@+id/FindIdBackButton"
        android:layout_width="48dp"
        android:layout_height="48sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/BackLoginDesc"
        android:onClick="BackToLogin"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24" />

    <TextView
        android:id="@+id/BackMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-16dp"
        android:layout_marginTop="24dp"
        android:text="@string/BackLogin"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/FindIdBackButton"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/FindIdDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="160dp"
        android:text="@string/FindIdText"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.271"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BackMain" />

    <EditText
        android:id="@+id/FindIdName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="48dp"
        android:ems="10"
        android:hint="@string/SignInNameHint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FindIdDesc" />

    <EditText
        android:id="@+id/FindIdPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:ems="10"
        android:hint="@string/SignInPhoneHint"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FindIdName" />

    <EditText
        android:id="@+id/FindIdVerify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:ems="10"
        android:hint="@string/SignInVerifyHint"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FindIdPhone" />

    <Button
        android:id="@+id/FindIdButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="48dp"
        android:onClick="findId"
        android:text="@string/FindIdText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FindIdVerify" />

    <Button
        android:id="@+id/FindIdSendVerifyButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="-96dp"
        android:layout_marginEnd="48dp"
        android:onClick="sendVerification"
        android:text="@string/SignInSendVerify"
        app:layout_constraintBottom_toBottomOf="@+id/FindIdPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/FindIdPhone"
        app:layout_constraintTop_toTopOf="@+id/FindIdPhone" />

    <Button
        android:id="@+id/FindIdVerifyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-96dp"
        android:layout_marginEnd="48dp"
        android:text="@string/SignInVerifyButton"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/FindIdVerify"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/FindIdVerify"
        app:layout_constraintTop_toTopOf="@+id/FindIdVerify" />

</androidx.constraintlayout.widget.ConstraintLayout>