<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ProfileImageView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/ProfileImageDesc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/blank_profile"
            tools:ignore="ImageContrastCheck" />

        <ImageButton
            android:id="@+id/ProfileImageChangeButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="-24dp"
            android:layout_marginTop="-24dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/ProfileImageChangeButtonDesc"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toEndOf="@+id/ProfileImageView"
            app:layout_constraintTop_toBottomOf="@+id/ProfileImageView"
            app:srcCompat="@android:drawable/ic_menu_add"
            tools:ignore="ImageContrastCheck" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ProfileNameLayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/ProfileTOULayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="32dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/ProfileTOUText"
                        android:layout_width="5dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="3"
                        android:text="@string/TOUText"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/ProfileTOUArrow"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/TOUDesc"
                        android:rotation="180"
                        app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ProfileSignoutLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="32dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/ProfileSignoutText"
                        android:layout_width="5dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="3"
                        android:text="@string/SignoutText"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/ProfileSignoutArrow"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/ProfileSignOutDesc"
                        android:rotation="180"
                        app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ProfileLogout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="32dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/ProfileLogoutText"
                        android:layout_width="5dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="3"
                        android:text="@string/LogoutText"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/ProfileLogoutArrow"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/ProfileLogoutDesc"
                        android:rotation="180"
                        app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ProfileChangePwLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="32dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/ProfileChangePwText"
                        android:layout_width="5dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="3"
                        android:text="@string/ProfileChangePWText"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/ProfileChangePwArrow"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/ProfileChangePWDesc"
                        android:rotation="180"
                        app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/ProfileIdLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ProfileImageView">

            <TextView
                android:id="@+id/ProfileIdTextView"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/IdText"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/ProfileIdEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="@string/ProfileIdHintSample" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ProfileNameLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ProfileIdLayout">

            <TextView
                android:id="@+id/ProfileNameTextView"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/NameText"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextTextPersonName4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="@string/ProfileNameHintSample" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>