<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="320dp"
        android:layout_height="320dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="0dp"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        android:src="@drawable/elephant" />

    <Button
        android:id="@+id/button2"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="444dp"
        android:text="@string/HomeMoveAnalysisText" />

    <Button
        android:id="@+id/button3"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="390dp"
        android:text="@string/HomeDetailAnalysisText" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="340dp"
        android:text="@string/HomeCountText"
        android:textSize="24dp" />
</FrameLayout>