<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TermOfUseActivity">

    <ImageButton
        android:id="@+id/FindIdBackButton"
        android:layout_width="48dp"
        android:layout_height="48sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/BackLoginDesc"
        android:onClick="BackToLogin"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24" />

    <TextView
        android:id="@+id/BackMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-16dp"
        android:layout_marginTop="24dp"
        android:text="@string/BackLogin"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/FindIdBackButton"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/TermOfUseTextView"
        android:layout_width="0dp"
        android:layout_height="440dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BackMain">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/TermOfUse"
                tools:layout_editor_absoluteX="179dp"
                tools:layout_editor_absoluteY="212dp" />

        </LinearLayout>
    </ScrollView>

    <CheckBox
        android:id="@+id/TermOfUseCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TermOfUseAgree"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TermOfUseTextView" />

    <Button
        android:id="@+id/TOUButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:onClick="launchSignUpActivity"
        android:text="@string/LoginFromButton"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TermOfUseCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>